--- a/frontend/src/fonts.scss
+++ b/frontend/src/fonts.scss
@@ -79,7 +79,7 @@
        url('/assets/fonts/roboto-mono-v12-latin-700.svg#RobotoMono') format('svg'); /* Legacy iOS */
 }
 
-// https://google.github.io/material-design-icons
+// https://google.github.io/material-design-icons/#icon-font-for-the-web
 
 @font-face {
   font-family: 'Material Icons';
@@ -87,9 +87,12 @@
   font-weight: 400;
   font-display: block;
   src: url(/assets/fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(/assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
+  // src: local('Material Icons'),
+  //   local('MaterialIcons-Regular'),
+  //   url(/assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
+  //   url(/assets/fonts/MaterialIcons-Regular.woff) format('woff'),
+  //   url(/assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
+  src: url(/assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
     url(/assets/fonts/MaterialIcons-Regular.woff) format('woff'),
     url(/assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
 }
