Added OpenAPI things

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -19,6 +19,13 @@
 			>
 				<mat-icon>people</mat-icon> Online users
 			</button>
+			<button
+				mat-button
+				routerLink="/admin/openai-tokens"
+				routerLinkActive="active"
+			>
+				<mat-icon>auto_stories</mat-icon> OpenAI tokens
+			</button>
 		</div>
 	</div>
 </div>
