--- a/frontend/src/app/header/download/download.component.scss
+++ b/frontend/src/app/header/download/download.component.scss
@@ -57,7 +57,7 @@
 
 	display: flex;
 	justify-content: space-evenly;
-	align-items: flex-start;
+	align-items: center;
 
 	mat-card {
 		width: 250px;
@@ -74,7 +74,7 @@
 			margin-bottom: 4px;
 		}
 
-		p {
+		.under-text {
 			font-size: 12px;
 			margin: 4px;
 		}
