--- a/frontend/src/app/admin/user/user.component.html
+++ b/frontend/src/app/admin/user/user.component.html
@@ -15,6 +15,12 @@
 			{{ user.username }}
 			<span *ngIf="user.admin" style="color: #f44336;">(admin)</span>
 		</h1>
+		<span
+			*ngIf="user.banned"
+			class="not verified big"
+			style="margin-left: 16px;"
+			>banned</span
+		>
 	</div>
 
 	<div class="row">
@@ -199,6 +205,10 @@
 			<div style="margin: 16px 0;"></div>
 			<button mat-flat-button color="primary" (click)="onImpersonate()">
 				<mat-icon>camera</mat-icon> Impersonate
+			</button>
+			<span style="margin: 0 8px;"></span>
+			<button mat-flat-button color="primary" (click)="onToggleBanned()">
+				<mat-icon>do_disturb</mat-icon> Toggle banned
 			</button>
 		</div>
 
