--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -389,5 +389,9 @@
 	</p>
 	<p style="opacity: 0.3;">
 		<a routerLink="/privacy-policy" style="color: #fff;">Privacy Policy</a>
+		<span style="margin: 0 4px;"></span>
+		<a routerLink="/code-of-conduct" style="color: #fff;">
+			Code of Conduct
+		</a>
 	</p>
 </div>
