--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -45,8 +45,25 @@
 		Requires a <b style="font-weight: 700;">high end computer</b> and an
 		<b style="font-weight: 700;">Nvidia GTX 1060</b> or higher.
 		<br />
-		<span style="font-size: 12px;">
+		<span style="font-size: 14px;">
 			AMD graphics cards are not supported.
+			<a
+				href="javascript:"
+				(click)="onAmdComplications()"
+				style="
+					font-weight: 500;
+					font-style: italic;
+					color: #fff !important;
+				"
+			>
+				Here's why
+				<mat-icon
+					inline
+					style="vertical-align: middle; margin-left: 2px;"
+				>
+					east
+				</mat-icon>
+			</a>
 		</span>
 	</p>
 </mat-card>
