Added location and browser to reset email password

--- a/server/templates/email-reset-password.hbs
+++ b/server/templates/email-reset-password.hbs
@@ -28,7 +28,7 @@
 			"
 		>
 			<img
-				style="width: 100%;"
+				style="width: 100%"
 				src="https://tivolicloud.com/assets/logo-light.png"
 			/>
 		</div>
@@ -43,11 +43,21 @@
 		>
 			Reset password for <b>{{ username }}</b>
 		</h2>
-		<div style="padding: 20px 20px;">
-			<p style="margin: 0;">
+		<div style="padding: 20px 20px">
+			<p style="margin: 0">
 				You've requested to change your password. If this was a mistake,
 				please ignore this email and let us know. Your account is always
 				safe.
+				<br />
+				<br />
+				The request was made in this location:
+				<br />
+				<b>{{ location }}</b>
+				<br />
+				<br />
+				The request was made with this browser:
+				<br />
+				<b>{{ browser }}</b>
 				<br />
 				<br />
 				The button below will reset the password for:
@@ -55,7 +65,7 @@
 				<b>{{ email }}</b>
 			</p>
 			<br />
-			<a href="{{ resetPasswordUrl }}" style="text-decoration: none;">
+			<a href="{{ resetPasswordUrl }}" style="text-decoration: none">
 				<h3
 					style="
 						display: inline-block;
@@ -72,7 +82,7 @@
 			</a>
 			<br />
 			<br />
-			<span style="opacity: 0.75;">
+			<span style="opacity: 0.75">
 				You can reach us at
 				<a href="mailto:support@tivolicloud.com">
 					support@tivolicloud.com
@@ -89,6 +99,6 @@
 			text-align: center;
 		"
 	>
-		Copyright &copy; Tivoli Cloud VR Inc, 2020
+		Copyright &copy; Tivoli Cloud VR Inc, {{ year }}
 	</div>
 </div>
