--- a/server/templates/email-verify.hbs
+++ b/server/templates/email-verify.hbs
@@ -44,7 +44,7 @@
 			Email verification for <b>{{ username }}</b>
 		</h2>
 		<div style="padding: 20px 20px">
-			<p style="margin:0;">
+			<p style="margin: 0">
 				Thank you for interest in Tivoli Cloud VR! This is the
 				verification email for your account.
 				<br />
@@ -58,12 +58,12 @@
 				as soon as possible. Your account security is important to us.
 			</p>
 			<br />
-			<a href="{{ verifyUrl }}" style="text-decoration: none;">
+			<a href="{{ verifyUrl }}" style="text-decoration: none">
 				<h3
 					style="
 						display: inline-block;
-						margin: 0; 
-						padding: 10px; 
+						margin: 0;
+						padding: 10px;
 						color: #fff;
 						background: #e91e63;
 						border-radius: 4px;
@@ -75,7 +75,7 @@
 			</a>
 			<br />
 			<br />
-			<span style="opacity: 0.75;">
+			<span style="opacity: 0.75">
 				You can reach us at
 				<a href="mailto:support@tivolicloud.com">
 					support@tivolicloud.com
@@ -92,6 +92,6 @@
 			text-align: center;
 		"
 	>
-		Copyright &copy; Tivoli Cloud VR Inc, 2020
+		Copyright &copy; Tivoli Cloud VR Inc, {{ year }}
 	</div>
 </div>
