--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -13,13 +13,14 @@
 
 // to be replaced by above
 @import "~@angular/material/theming";
-@include mat-core();
+@use "~@angular/material" as mat;
+@include mat.core();
 
-$primary: mat-palette($mat-pink);
-$accent: mat-palette($mat-pink, A200, A100, A400);
-$warn: mat-palette($mat-red);
-$theme: mat-light-theme($primary, $accent, $warn);
-@include angular-material-theme($theme);
+$primary: mat.define-palette(mat.$pink-palette);
+$accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$warn: mat.define-palette(mat.$red-palette);
+$theme: mat.define-light-theme($primary, $accent, $warn);
+@include mat.all-component-themes($theme);
 
 @import "./fonts.scss";
 @import "bootstrap/dist/css/bootstrap-grid.css";
@@ -35,11 +36,17 @@ body {
 }
 
 .bg-warn {
-	background-color: mat-color($mat-red, 500) !important;
+	background-color: mat.get-color-from-palette(
+		mat.$red-palette,
+		500
+	) !important;
 }
 
 .bg-success {
-	background-color: mat-color($mat-light-green, 500) !important;
+	background-color: mat.get-color-from-palette(
+		mat.$light-green-palette,
+		500
+	) !important;
 }
 
 h1,
@@ -55,7 +62,7 @@ b {
 
 a {
 	text-decoration: inherit;
-	color: mat-color($mat-pink, 500);
+	color: mat.get-color-from-palette(mat.$pink-palette, 500);
 }
 
 // .mat-button-wrapper {
