Updated C type corp to B

--- a/frontend/src/app/about-us/about-us.component.html
+++ b/frontend/src/app/about-us/about-us.component.html
@@ -6,7 +6,7 @@
 				The Tivoli team
 			</h2>
 			<p>
-				Tivoli Cloud VR, inc is a woman-operated Delaware C-corporation
+				Tivoli Cloud VR, Inc. is a woman-operated Delaware B-corporation
 				based out of San Francisco, CA.
 				<br />
 				We're pleased to be a member of the third
