Update download component

--- a/frontend/src/app/header/download/amd-complications/amd-complications.component.html
+++ b/frontend/src/app/header/download/amd-complications/amd-complications.component.html
@@ -14,13 +14,13 @@
 		src="/assets/amd-complications/3.png"
 	/>
 </div>
-<h1 style="text-align: center; font-size: 4em; font-weight: 400;">
+<h1 style="text-align: center; font-size: 3em; font-weight: 400;">
 	...and it crashes a lot...
 </h1>
 <h1
 	style="
 		text-align: center;
-		font-size: 2em;
+		font-size: 1.5em;
 		font-weight: 400;
 		max-width: 50vw;
 		margin: 0 auto;
@@ -34,15 +34,15 @@
 <h1
 	style="
 		text-align: center;
-		font-size: 2em;
+		font-size: 1.5em;
 		font-weight: 400;
 		max-width: 30vw;
 		margin: 0 auto;
 	"
 >
-	This is also a reason why macOS support is experimental.
+	This is also the reason why we can't have macOS support.
 	<br />
 	<br />
-	We're absolutely not the only people suffering from this issue.
+	We're not the only people who are dealing with this issue.
 </h1>
 <div style="margin: 120px 0;"></div>
