--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -81,30 +81,36 @@
 				<a
 					mat-flat-button
 					color="primary"
-					[href]="release.platforms.windows.url"
+					[href]="launcherRelease.platforms.windows.url"
 				>
 					Download for Windows
 				</a>
 				<p class="under-text">
-					<b>Windows 10 64-bit</b> ({{
-						release.platforms.windows.size
-					}})
+					<b>Windows 10 64-bit</b> or higher
+					<!-- ({{ launcherRelease.platforms.windows.size }}) -->
 				</p>
 			</mat-card>
 			<mat-card class="mat-elevation-z2">
 				<img src="/assets/logos/linux.svg" />
 				<h2>Linux</h2>
-				<button
+				<!-- <button
 					mat-flat-button
 					color="primary"
 					[matMenuTriggerFor]="linuxMenu"
 				>
 					Download for Linux
-				</button>
+				</button> -->
+				<a
+					mat-flat-button
+					color="primary"
+					[href]="launcherRelease.platforms.linux.url"
+				>
+					Download for Linux
+				</a>
 				<p class="under-text">
 					<b>glibc 2.27 (Ubuntu 18.04)</b> or higher
 				</p>
-				<mat-menu
+				<!-- <mat-menu
 					#linuxMenu="matMenu"
 					xPosition="before"
 					style="width: 1000px;"
@@ -116,9 +122,9 @@
 							padding-top: 12px;
 							height: 64px;
 						"
-						[href]="release.platforms.linux.url"
+						[href]="launcherRelease.platforms.linux.url"
 					>
-						<b>AppImage ({{ release.platforms.linux.size }})</b>
+						<b>AppImage ({{ launcherRelease.platforms.linux.size }})</b>
 						<br />
 						chmod +x ./tivoli.AppImage && ./tivoli.AppImage
 					</a>
@@ -130,7 +136,7 @@
 							height: 64px;
 						"
 						[href]="
-							release.platforms.linux.url.replace(
+							launcherRelease.platforms.linux.url.replace(
 								'.AppImage',
 								'.deb'
 							)
@@ -155,9 +161,9 @@
 						yay -S
 						<span style="color: #e91e63;">tivoli-cloud-vr-bin</span>
 					</a>
-				</mat-menu>
+				</mat-menu> -->
 			</mat-card>
-			<div style="opacity: 0.7; width: 150px;">
+			<!-- <div style="opacity: 0.7; width: 150px;">
 				<button
 					mat-icon-button
 					style="transform: scale(1.5);"
@@ -186,38 +192,65 @@
 					<a
 						mat-flat-button
 						color="primary"
-						[href]="release.platforms.macos.url"
+						[href]="launcherRelease.platforms.macos.url"
 					>
 						Download for macOS
 					</a>
 					<p class="under-text">
 						<b>macOS 10.13</b> or higher ({{
-							release.platforms.macos.size
+							launcherRelease.platforms.macos.size
 						}})
 						<br />
 						<b>macOS 11 Big Sur not supported!</b>
 					</p>
 				</mat-card>
-			</ng-container>
+			</ng-container> -->
 		</div>
 		<div class="current-info">
-			<h3>
-				<span style="font-size: 1.25em;"
-					>Version {{ release.version }}</span
-				>
-				<br />
+			<h3 style="text-align: center;">
 				<a
 					href="https://docs.tivolicloud.com/changelog"
 					target="_blank"
 				>
-					View changelog
+					See the changelog
 				</a>
+				for
+				<br />
+				all updates notes
 			</h3>
-			<h3>
+			<div style="margin: 0 32px;"></div>
+			<div>
+				<!-- <h3
+					style="
+						display: inline-flex;
+						flex-direction: row;
+						align-items: center;
+						justify-content: center;
+						margin: 0;
+					"
+				>
+					<mat-icon style="margin-right: 4px;">info</mat-icon>
+					Current Versions
+				</h3> -->
+				<p style="margin: 0;">
+					Launcher
+					<span class="version">{{ launcherRelease.version }}</span>
+					<span style="margin: 0 16px;"></span>
+					Interface
+					<span class="version">
+						{{
+							interfaceRelease == null
+								? "loading..."
+								: interfaceRelease.version
+						}}
+					</span>
+				</p>
+			</div>
+			<!-- <h3>
 				Released
 				<br />
-				{{ release.releaseDate | date: "MMMM dd, y" }}
-			</h3>
+				{{ launcherRelease.releaseDate | date: "MMMM dd, y" }}
+			</h3> -->
 		</div>
 	</ng-container>
 </ng-container>
