Added silence.mp4 for ios safari support

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,6 +2,7 @@
 	<div class="background">
 		<video preload autoplay muted loop #video>
 			<source src="/assets/silence.webm" type="video/webm" />
+			<source src="/assets/silence.mp4" type="video/mp4" />
 		</video>
 	</div>
 	<div class="content">
