Added playsinline to silence background for ios safari

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="header">
 	<div class="background">
-		<video preload autoplay muted loop #video>
+		<video preload autoplay muted loop playsinline #video>
 			<source src="/assets/silence.webm" type="video/webm" />
 			<source src="/assets/silence.mp4" type="video/mp4" />
 		</video>
